--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.10"
